# terrariacolorer

./: CMakeLists.txt  CopyFolders.cmake  README.md  colorer.cpp  colorer.h  main.cpp
gradients/: rainbow.lua  ukraine.lua
